--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2682,107 +2682,107 @@ stories:
   domain: http://www.madison-press.com/
   link: https://www.madison-press.com/news/local/278112/xenikis-sworn-in-as-commissioner
 images:
-- name: beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-yellow-paper.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-creativity.jpg
-- name: cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-alberto-giacometti.jpg
-- name: status-berlin-status-berlin-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-far-away.jpg
-- name: docks-docks-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-marcel-duchamp.jpg
-- name: cannon-facing-cannon-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-2-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-really-hot.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-dark-soul.JPG
-- name: supreme-court-supremecourt-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colored-circuits.jpg
-- name: old-cabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
-- name: server-cloud-server-racks-clouds-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-granite.jpg
-- name: machine-road-machine-road-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-china-prop.jpg
-- name: capital-battle-capitolbattle-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sand-paper.jpg
-- name: supreme-court-supremecourt-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-diego-rivera1.jpg
-- name: berlinwall2-berlinwall-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-really-hot.jpg
-- name: nyc-flag-api-conversations.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations.jpg
-- name: docks-docks-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-alien-goggles.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
-- name: oldbarn-oldbarn-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crunch-paper.jpg
-- name: stories-face-2-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-face-2-blue-circuit.jpg
-- name: beach-rocks-beach-rocks-currents-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-granite.jpg
-- name: paris-paris-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-dream.jpg
-- name: oldbarn-oldbarn-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
-- name: aws-s3-stories-vancouver-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
-- name: razorcliff-razorcliff-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-pablo-blue.jpg
-- name: curtain-curtain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-creativity.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-ww2-dresden.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-dresden.JPG
-- name: razorcliff-razorcliff-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-far-away.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alien-goggles.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-matrix.JPG
-- name: art-museum-art-museum-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-light-dali.jpg
-- name: berlinwall2-berlinwall-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
-- name: aws-s3-models-dali1.t7
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-models-dali1.t7
-- name: rockingchair-rockingchair-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-post-modern.jpg
-- name: store-on-corner-store-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-paper.jpg
-- name: birdhouse-birdhouse-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-granite.jpg
-- name: oldsmallboat-oldsmallboat-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-umberto-bocc.jpg
-- name: windowmountain-window-mountain-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-nazi-poster.jpg
-- name: old-granary-field-oldhouse-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-marcel-duchamp.jpg
-- name: adam-smith-adam-smith-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-diego-rivera1.jpg
-- name: stories-new-31-156-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-31-156-800-500-0-max-0--1--1.jpg
-- name: art-museum-art-museum-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-gred-mash.jpg
-- name: capital-battle-capitolbattle-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-pond.jpg
-- name: castle-wall-DSC-0067-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sand-paper.JPG
-- name: old-barn-old-barn-1500-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-constitution.jpg
-- name: legal-statue-legalstatue-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
-- name: berlinwall2-berlinwall-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-spagetti-accident.jpg
-- name: locked-up-steam-lock-up-steam-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-asteroids.jpg
-- name: gypsymosaic-gypsy-eyes-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-bright-sand.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+- name: file-00_00_15_87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_15_87.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dark-rain.jpg
+- name: old-door-lock-old-door-lock-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-diego-rivera1.jpg
+- name: containership-containership-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-sunday.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit.jpg
+- name: gypsy-wagon-gypsywagon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-light-dali.jpg
+- name: crow_bright_sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
+- name: oldhousecars-house-old-cars-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
+- name: subway-subway-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-purple-pond.jpg
+- name: old-cabin-oldcabin-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-spagetti-accident.jpg
+- name: eduardo-eduardo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-matrix.jpg
+- name: old-house-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-hot-spicy.jpg
+- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
+- name: mistywoods-babyfoot-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-really-hot.jpg
+- name: aws-s3-stories-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-legalstatue-light-dali.jpg
+- name: san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-horiz-circuit.jpg
+- name: subway-subway-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-creativity.jpg
+- name: old-granary-field-oldhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-atari-missle.jpg
+- name: old-barn-old-barn-1500-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-really-hot.jpg
+- name: stories-carryload-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-dali-three.jpg
+- name: old-cabin-oldcabin-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-really-hot.jpg
+- name: miamibeach-miamibeach-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-graham-sutherland.jpg
+- name: downtown-street-view-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-street-view-copper-circuit.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dry-skin.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
+- name: liberty-back-statue-liberty-back-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-circuit.jpg
+- name: sand-hand-sand-hand-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smoking-cigarette.jpg
+- name: oldhotel-oldhotel-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dali-three.jpg
+- name: border-fence-border-fence-on-hill-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-post-modern.jpg
+- name: old-school-house-old-schoolhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-crunch-paper.jpg
+- name: crow-crow-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-two.jpg
+- name: walled-garden-walled-garden-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-diego-rivera1.jpg
+- name: stories-new-27-93-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--1--1.jpg
+- name: bluelake-bright-sand-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-bright-sand-file-00-00-38-67.jpg
+- name: oldsmallboat-oldsmallboat-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-constitution.jpg
+- name: oldhotel-oldhotel-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crunch-paper.jpg
+- name: power-lines-power-lines-empty-space-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-ww2-dresden.jpg
+- name: trucksilo-trucksilo-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sunday.jpg
+- name: old-granary-field-granaryfield-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
+- name: gypsy-wagon-gypsywagon-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-hot-spicy.jpg
+- name: locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-propaganda-leaflets.jpg
+- name: downtown-old-empty-retail-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-old-empty-retail-norman-rockwell-ruby-bridges.jpg
+- name: mediterranean-mediterranean-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-graham-sutherland.jpg
+- name: rockingchair-rockingchair-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
+- name: mediterranean-mediterranean-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-pablo-blue.jpg
+- name: death-valley-death-valley-national-park-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-light-dali.jpg
+- name: bordercrossing-bordercrossing-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crafty-painting.jpg
+- name: oldhotel-oldhotel-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-wols.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-kand-two.jpg
+- name: aws-s3-mountainlake-mountainlake-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
 ---
 Flooding Hits Louisiana As Residents Brace For Hurricane.&nbsp;Opponents Want Hearing On Dakota Access Pipeline Expansion.&nbsp;New Hampshire Legalizes Sports Betting.&nbsp;Trooper Recruits Hit The Streets.&nbsp;Hong Kong Protests Augur Murky Outlook For Financial Hub.&nbsp;Disco Demolition Night Riot.&nbsp;Apple Says It's Fixing Bug In Walkie Talkie App.&nbsp;Kevin Durant Had Strange Way To Tell Nets He Was Signing With Them.&nbsp;
